[project]
name = "lab-commons"
dynamic = ["version"]
description = "Project-agnostic shared infrastructure (logging, paths) for the motronics/optimi-lab/wdg-lab family of labs."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Mingyang Bao", email = "edcgghedcgg@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    # Tier 1 core deps only -- structured logging + platform-standard path resolution.
    # No motronics, no EM/solver deps: a consumer that wants only logging installs
    # nothing heavier than this.
    "structlog",
    "platformdirs",
]

[project.urls]
Homepage = "https://github.com/DawnEver/lab-commons"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/lab_commons/__version__.py"
template = "__version__ = version = \"{version}\"\n__version_tuple__ = version_tuple = {version_tuple}\n"

[tool.hatch.build.targets.wheel]
packages = ["src/lab_commons"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF", "PLW0603", "ARG001", "TRY301"]
